Prac1 HTML structing

--- a/prac1/dom.html
+++ b/prac1/dom.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,41 @@
     <script src="../javascript/dom.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>CSS test program</h1>
+    </header>
+    <section>
+        <h1>program-box</h1>
+        <section>
+            <h1>left-box</h1>
+            <section>
+                <h1>border-width</h1>
+                <input type="range" min="0" max="10px">
+            </section>
+            <section>
+                <h1>border-style</h1>
+                <select>
+                    <option>dotted</option>
+                    <option>dashed</option>
+                    <option>solid</option>
+                    <option>double</option>
+                    <option>groove</option>
+                </select> 
+            </section>
+            <section>
+                <h1>border-color</h1>
+                <input type="color">
+            </section>
+            <section>
+                <h1>CSS text</h1>
+                <div>CSS text</div>
+            </section>
+            
+        </section>
+        <section>
+            <h1>right-box</h1>
+            <div>styled square</div>
+        </section>
+    </section>
 </body>
 </html>
