--- a/prac1/dom.html
+++ b/prac1/dom.html
@@ -5,45 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../css/dom.css" type="text/css" rel="stylesheet">
-    <script src="../javascript/dom.js"></script>
+    <link href="./dom.css" type="text/css" rel="stylesheet">
+    <script src="./dom.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>CSS test program</h1>
+        <hr>
     </header>
-    <section>
+    <section class="program-box">
         <h1>program-box</h1>
-        <section>
-            <h1>left-box</h1>
-            <section>
-                <h1>border-width</h1>
-                <input type="range" min="0" max="10px">
+        <div class="program-content">
+            <section class="left-box">
+                <h1 class="d-none">left-box</h1>
+                <section>
+                    <h1>border-width</h1>
+                    <input type="range" min="0" max="10px">
+                </section>
+                <section>
+                    <h1>border-style</h1>
+                    <select>
+                        <option>dotted</option>
+                        <option>dashed</option>
+                        <option>solid</option>
+                        <option>double</option>
+                        <option>groove</option>
+                    </select> 
+                </section>
+                <section>
+                    <h1>border-color</h1>
+                    <input type="color">
+                </section>
+                <section>
+                    <h1>CSS text</h1>
+                    <div>CSS text</div>
+                </section>
             </section>
-            <section>
-                <h1>border-style</h1>
-                <select>
-                    <option>dotted</option>
-                    <option>dashed</option>
-                    <option>solid</option>
-                    <option>double</option>
-                    <option>groove</option>
-                </select> 
+            <section class="right-box">
+                <h1 class=d-none>right-box</h1>
+                <div class="shape-box">
+                    <div id="styled-square">styled square</div>
+                </div>
             </section>
-            <section>
-                <h1>border-color</h1>
-                <input type="color">
-            </section>
-            <section>
-                <h1>CSS text</h1>
-                <div>CSS text</div>
-            </section>
-            
-        </section>
-        <section>
-            <h1>right-box</h1>
-            <div>styled square</div>
-        </section>
+        </div>
     </section>
 </body>
 </html>
