--- a/prac-skeleton/dom.html
+++ b/prac-skeleton/dom.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../css/dom.css" type="text/css" rel="stylesheet">
-    <script src="../javascript/dom.js"></script>
+    <link href="./dom.css" type="text/css" rel="stylesheet">
+    <script src="./dom.js"></script>
 </head>
 <body>
     
