--- a/prac1/dom.html
+++ b/prac1/dom.html
@@ -18,11 +18,11 @@
         <div class="program-content">
             <section class="left-box">
                 <h1 class="d-none">left-box</h1>
-                <section>
+                <section class="width">
                     <h1>border-width</h1>
-                    <input type="range" min="0" max="10px">
+                    <input type="range" min="0" max="30" value="2" >
                 </section>
-                <section>
+                <section class="style">
                     <h1>border-style</h1>
                     <select>
                         <option>dotted</option>
