Prac1: add border-color function

--- a/prac1/dom.html
+++ b/prac1/dom.html
@@ -31,11 +31,11 @@
                         <option>double</option>
                     </select> 
                 </section>
-                <section>
+                <section class="color">
                     <h1>border-color</h1>
                     <input type="color">
                 </section>
-                <section>
+                <section class="css-text">
                     <h1>CSS text</h1>
                     <div>CSS text</div>
                 </section>
