--- a/prac2/dom.html
+++ b/prac2/dom.html
@@ -12,22 +12,24 @@
     <header><h1>Calculator</h1></header>
     <section class = calculator>
         <input type="text" class="board">
-        <input type="button" class="num-btn" value=1>
-        <input type="button" class="num-btn" value=2>
-        <input type="button" class="num-btn" value=3>
-        <input type="button" class="opr-btn" value="+">
-        <input type="button" class="num-btn" value=4>
-        <input type="button" class="num-btn" value=5>
-        <input type="button" class="num-btn" value=6>
-        <input type="button" class="opr-btn" value="-">
-        <input type="button" class="num-btn" value=7>
-        <input type="button" class="num-btn" value=8>
-        <input type="button" class="num-btn" value=9>
-        <input type="button" class="opr-btn" value="*">
-        <input type="button" class="opr-btn" value="/">
-        <input type="button" class="num-btn" value=0>
-        <input type="button" class="opr-btn" value="=">
-        <input type="button" class="opr-btn" value="AC">
+        <div class="btns">
+            <input type="button" class="num-btn" value=1>
+            <input type="button" class="num-btn" value=2>
+            <input type="button" class="num-btn" value=3>
+            <input type="button" class="opr-btn" value="+">
+            <input type="button" class="num-btn" value=4>
+            <input type="button" class="num-btn" value=5>
+            <input type="button" class="num-btn" value=6>
+            <input type="button" class="opr-btn" value="-">
+            <input type="button" class="num-btn" value=7>
+            <input type="button" class="num-btn" value=8>
+            <input type="button" class="num-btn" value=9>
+            <input type="button" class="opr-btn" value="*">
+            <input type="button" class="opr-btn" value="/">
+            <input type="button" class="num-btn" value=0>
+            <input type="button" class="opr-btn" value="=">
+            <input type="button" class="opr-btn" value="AC">
+        </div>
     </section>
 </body>
 </html>
