Prac2: add ID to operator button

--- a/prac2/dom.html
+++ b/prac2/dom.html
@@ -24,11 +24,11 @@
             <input type="button" class="num-btn" value=7>
             <input type="button" class="num-btn" value=8>
             <input type="button" class="num-btn" value=9>
-            <input type="button" class="opr-btn" value="*">
-            <input type="button" class="opr-btn" value="/">
+            <input type="button" class="opr-btn" value="*" id="mul">
+            <input type="button" class="opr-btn" value="/" id="div">
             <input type="button" class="num-btn" value=0>
-            <input type="button" class="opr-btn" value="=">
-            <input type="button" class="opr-btn" value="AC">
+            <input type="button" class="opr-btn" value="=" id="res">
+            <input type="button" class="opr-btn" value="AC" id="AC">
         </div>
     </section>
 </body>
