Prac3: struct HTML

--- a/prac3/dom.html
+++ b/prac3/dom.html
@@ -9,6 +9,26 @@
     <script src="./dom.js"></script>
 </head>
 <body>
-    
+    <header><h1>Card Change</h1></header>
+    <section class="main-section">
+        <h1 class="d-none">main section</h1>
+        <section class="card-section">
+            <h1 class="d-none">card section</h1>
+            <div class="first" id="card1">
+                card1
+            </div>
+            <div class="second" id="card2">
+                card2
+            </div>
+            <div class="third" id="card3">
+                card3
+            </div>
+        </section>
+        <section class="button-section">
+            <h1 class="d-none">button section</h1>
+            <input type="button" value="이전">
+            <input type="button" value="다음">
+        </section>
+    </section>
 </body>
 </html>
