Prac3: add button id

--- a/prac3/dom.html
+++ b/prac3/dom.html
@@ -26,8 +26,8 @@
         </section>
         <section class="button-section">
             <h1 class="d-none">button section</h1>
-            <input type="button" value="이전">
-            <input type="button" value="다음">
+            <input type="button" value="이전" id="btn-prev">
+            <input type="button" value="다음" id="btn-next">
         </section>
     </section>
 </body>
